<resources>
    <string name="app_name" >PurchaseHistory</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username_email">Username or Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_log_in">Log in</string>
    <string name="action_create_account">Create account</string>
    <string name="welcome">"Welcome %s!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_email">Must be a valid email</string>
    <string name="login_failed">"Login failed"</string>
    <string name="server_connection_failed_500">"Could not reach server. Try again later"</string>
    <string name="server_connection_failed_long">We\'re sorry, we couldn’t reach the server right now. Please check your internet connection and try again.</string>
    <string name="login_failed_401">"Invalid username or password"</string>
    <string name="failed">"Something went wrong"</string>
    <string name="invalid_credentials">Combination of username and password does not exist</string>
    <string name="back">Back</string>
    <string name="alert_session_ended">Session ended, please log in again</string>
    <string name="alert_connection_timeout">Cannot connect to server. Please try again later.</string>
    <string name="title_activity_register">Register</string>
    <string name="register_failed">Register failed</string>
    <string name="account_created">Account created successfully</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_qr">QR Scanner</string>
    <string name="title_activity_qrscanner">QR Scanner</string>
    <string name="title_activity_graph">Statistics</string>
    <string name="title_activity_home">Home</string>
    <string name="addPurchaseButton">Add purchase</string>
    <string name="qr_manual_add_title">Add a bill</string>
    <string name="price">Price</string>
    <string name="submit_text">Submit</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="reset_text">Reset</string>
    <string name="qr_open_camera_button_hint">Open Camera for QR code</string>
    <string name="currency_zero">0.00</string>
    <string name="edit_text">Edit</string>
    <string name="add_button_text">Add</string>
    <string name="create_category">Category</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="color">Color</string>
    <string name="category_color">Category Color</string>
    <string name="category_name">Category Name</string>
    <string name="terminal_id_text">Terminal ID:</string>
    <string name="bill_id_text">Bill ID:</string>
    <string name="qr_terminal_id_text">Terminal ID:</string>
    <string name="qr_bill_id_text">Bill ID:</string>
    <string name="accordionToggleText">Toggle accordion</string>
    <string name="lorem">Lorem ipsum</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_button_text">Settings</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="purchaseEdit_update_purchase_title">Update purchase #</string>
    <string name="menu_export_data_as_csv">Export data as CSV</string>
    <string name="title_purchases_list">Latest Purchases</string>
    <string name="retry_btn">Retry</string>
    <string name="dashboard_wip">Work in progress. plz ignore ☺</string>
    <string name="filterButton">Filter</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="logo">Logo</string>
    <string name="loading">Loading</string>
    <string name="referral_header">Referral system</string>
    <string name="menu_get_referral_link">Share a referral link</string>
    <string name="currently_observing_user">Currently observing user:</string>
    <string name="empty_label">Nothing to show</string>
    <string name="user_settings">User settings</string>
    <string name="change_text">Change</string>
    <string name="default_text">Default text</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="banner_ad_unit_id">YOUR_BANNER_AD_UNIT_ID</string>
    <string name="title_spectated_users">Spectated Users</string>
    <string name="add_note">Add a note</string>
    <string name="lorem_ipsum">"         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id         interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales         nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos         himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet,         imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.           Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a         condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut         sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros         porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl         nec dolor bibendum, vel congue leo egestas.           Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at,         mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt         nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id.         Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse         sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque         est.           Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor         sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor         varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris.         Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non         viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat         diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.           Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis         egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer         dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec         maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce         dictum libero quis erat maximus, vitae volutpat diam dignissim.     "</string>
    <string name="token">Enter user token</string>
    <string name="error_spectating_list_add_user">Failed to add user to spectating list</string>
    <string name="no_data">No data available</string>
    <string name="add_user_button">Adds a new user</string>
    <string name="error_spectating_list_add_user_expired">Expired token! Try again with a new one.</string>
    <string name="invalid_password_match">Passwords do not match</string>
    <string name="invalid_password_empty">Please enter a new password.</string>
    <string name="invalid_code_six">Please enter a valid 6-digit code.</string>
    <string name="password_changed_successfully">Password changed successfully!</string>
    <string name="failed_to_change_password_please_try_again">Failed to change password. Please try again.</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="_6_digit_code">6-Digit Code</string>
    <string name="enter_the_code_sent_to_your_email_and_set_a_new_password">Enter the code sent to your email and set a new password.</string>
    <string name="sending">Sending…</string>
    <string name="reset_email_sent_successfully">Reset email sent successfully!</string>
    <string name="failed_to_send_reset_email_please_try_again">Failed to send reset email. Please try again.</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address.</string>
    <string name="send_reset_email">Send Reset Email</string>
    <string name="enter_your_email_to_receive_reset_instructions">Enter your email to receive reset instructions.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="i_already_have_a_code">I already have a code</string>
    <string name="tooManyRequest_429">Too many requests. Try again after a while.</string>
    <string name="email_not_found_400">No account was found with this email address.</string>
    <string name="no_purchases_to_show">There are no purchases to display</string>
    <string name="could_not_download_file">Could not download file</string>
    <string name="this_week">Last 7 Days</string>
    <string name="this_month">This month</string>
    <string name="three_months">Three months</string>
    <string name="application_settings">Application settings</string>
    <string name="total_str">Total:</string>
    <string name="edit_currency">Edit preferred currency</string>
    <string name="edit_currency_summary">The shown currency</string>
    <string name="credits">Credits</string>
    <string name="questions_and_answers">Frequently asked questions</string>
    <string name="more_info">More information</string>
    <string name="monthly_limit_summary">Shows the monthly limit in some charts.</string>
    <string name="monthly_limit_value_hint">E.g. 3000</string>
    <string name="add_monthly_limit">Add new Monthly Limit</string>
    <string name="edit_limits">Edit monthly limits</string>
    <string name="report_problem">Provide feedback or report a problem</string>
    <string name="qr_from_image">Gallery</string>
    <string name="select_language">Select Language</string>
    <string name="select_language_summary">Choose your preferred app language</string>
    <string name="remaining">Remaining:</string>
    <string name="out_of">out of</string>
    <string name="empty_price" translatable="false">--.--</string>
    <string name="no_monthly_spending_limit_set">No monthly spending limit set</string>
</resources>