<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/application_settings">
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="1"
            android:entries="@array/currency_list"
            android:entryValues="@array/currency_list_values"
            android:icon="@drawable/currency_search"
            android:key="currency_preference"
            android:summary="@string/edit_currency_summary"
            android:title="@string/edit_currency"
            app:iconTint="@color/primaryA10" />
    </PreferenceCategory>
    <ListPreference
        android:key="language_preference"
        android:title="@string/select_language"
        android:summary="@string/select_language_summary"
        android:entries="@array/language_list"
        android:entryValues="@array/language_list_values"
        android:defaultValue="en"
        android:icon="@drawable/language"
        app:iconTint="@color/primaryA10" />
    <Preference
        android:icon="@drawable/limit"
        android:key="monthly_limit_preference"
        android:summary="@string/monthly_limit_summary"
        android:title="@string/edit_limits"
        app:iconTint="@color/primaryA10" />
    <PreferenceCategory android:title="@string/more_info">
        <Preference
            android:id="@+id/credits_preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="credits_preference"
            android:title="@string/credits" />
        <Preference
            android:id="@+id/report_problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/bug"
            android:key="report_problem"
            android:title="@string/report_problem" />
        <Preference
            android:id="@+id/help_preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:icon="@drawable/question"
            android:iconTint="@color/primaryA10"

            android:key="help_preference"
            android:title="@string/questions_and_answers" />
    </PreferenceCategory>
</PreferenceScreen>