<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.dashboard.DashboardFragment">

    <TextView
        android:id="@+id/qr_billLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/qr_bill_id_text"
        app:layout_constraintEnd_toStartOf="@+id/qr_billIdValue"
        app:layout_constraintTop_toTopOf="@+id/qr_storeLabel" />

    <TextView
        android:id="@+id/qr_billIdValue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/qr_billLabel" />

    <TextView
        android:id="@+id/qr_storeLabel"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/qr_terminal_id_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/qr_storeIdValue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/qr_storeLabel"
        app:layout_constraintTop_toTopOf="@+id/qr_storeLabel" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_storeLabel">

        <LinearLayout
            android:id="@+id/qr_priceInputFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp">

            <EditText
                android:id="@+id/qr_priceInput"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:layout_weight="2"
                android:autofillHints="The total cost of the bill"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:nextFocusDown="@id/qr_dateInput"
                android:selectAllOnFocus="true"
                android:text="@string/currency_zero"
                android:textSize="35sp" />

            <Spinner
                android:id="@+id/qrCurrencySpinner"
                tools:listitem="@android:layout/simple_list_item_1"
                style="@style/CurrencyDropdown"
                android:layout_height="56dp"
                android:layout_width="80dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dateTimeButtons"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/qr_priceInputFrame">

            <Button
                android:id="@+id/qr_dateInput"
                style="@style/Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/date"
                android:nextFocusDown="@id/qr_timeInput" />

            <Button
                android:id="@+id/qr_timeInput"
                style="@style/Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/time"
                android:nextFocusDown="@id/qr_categorySpinner" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/category_row"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"

            android:paddingHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTimeButtons">

            <Spinner
                android:id="@+id/qr_categorySpinner"
                style="@style/BorderedDropdown"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:nextFocusDown="@id/qr_noteInput"
                tools:listitem="@layout/category_spinner_item" />

            <Button
                android:id="@+id/qr_categoryAddButton"
                style="@style/Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="3"
                android:autoSizeMaxTextSize="14sp"
                android:autoSizeMinTextSize="8sp"
                android:autoSizeTextType="uniform"
                android:drawableStart="@drawable/add"
                android:drawablePadding="8dp"
                android:maxLines="1"
                android:text="@string/create_category" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"

            android:gravity="end">
            <Button
                android:id="@+id/qrFloatingPhotoButton"
                style="@style/Borderless"
                android:layout_width="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/image"
                android:drawablePadding="8dp"
                android:text="@string/qr_from_image" />
            <Button
                android:id="@+id/qrFloatingQrButton"
                style="@style/Primary"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:contentDescription="@string/qr_open_camera_button_hint"
                android:drawableStart="@drawable/qr"
                android:drawablePadding="8dp"
                android:text="@string/title_activity_qr" />

        </LinearLayout>

        <EditText
            android:id="@+id/qr_noteInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:hint="@string/add_note"
            android:inputType="text"
            android:nextFocusDown="@id/qr_submitButton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <Button
                android:id="@+id/qr_submitButton"
                style="@style/Primary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/submit_text" />

            <Button
                android:id="@+id/qr_clearButton"
                style="@style/Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/reset_text" />
        </LinearLayout>

        <!--    <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-9339704833965519/5033206617"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />-->
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>