<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/editTextMonthlyLimitLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/name"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        >
        <EditText
            android:id="@+id/editTextMonthlyLimit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:hint="@string/monthly_limit_value_hint"
            android:inputType="numberDecimal" />
        <Spinner
            android:id="@+id/monthlyCurrencySpinner"
            style="@style/CurrencyDropdown" />
    </LinearLayout>


    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/buttonSave"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>