<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="20dp">

    <TextView
        android:id="@+id/subHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/lorem" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remaining" />

        <TextView
            android:id="@+id/heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_str" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/remainingBalanceText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:autoSizeMaxTextSize="40sp"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/empty_price"
            android:textColor="@color/text" />
        <TextView
            android:id="@+id/spendingText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeMinTextSize="8sp"
            android:text="@string/empty_price"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:textAlignment="textEnd"
            android:textColor="@color/text" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/data_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="45dp"
                android:layout_height="wrap_content"

                android:text="@string/out_of" />

            <TextView
                android:id="@+id/limitText"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/empty_price"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeMinTextSize="8sp"
                android:autoSizeTextType="uniform" />

            <ImageButton
                android:id="@+id/editLimit"
                style="@style/Bordered"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/edit" />
        </LinearLayout>


        <ProgressBar
            android:id="@+id/balanceBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleY="2"
            android:layout_marginBottom="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/missing_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/no_monthly_spending_limit_set" />

        <Button
            android:id="@+id/setup_limit_btn"
            style="@style/Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_monthly_limit" />
    </LinearLayout>
</LinearLayout>
