<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    android:gravity="start|center">

    <TextView
        android:id="@+id/purchasePriceText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/currency_zero" />

    <TextView
        android:id="@+id/purchaseTimeText"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center|start"
        android:autoSizeMaxTextSize="12sp"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:text="@string/lorem" />

    <TextView
        android:id="@+id/purchaseCategoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/chip_bg"
        android:layout_marginStart="4dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:minWidth="50dp"
        android:minHeight="30dp"
        android:paddingHorizontal="4dp"
        android:text="@string/lorem"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/purchaseNoteText"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:maxWidth="100dp"
        android:gravity="center|start"
        android:maxLines="2"
        android:text="@string/lorem" />

    <ImageButton
        android:id="@+id/purchase_edit_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/bordered_bg"
        android:backgroundTint="@color/surfaceA30"
        android:contentDescription="@string/edit_text"
        android:src="@drawable/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primaryA20" />
</LinearLayout>